methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:29: error: expected class or object definition
def faireV(c:Color){ //fait un V d'un couleur donnée 
^MethodsPicture:37: error: Unmatched closing brace '}' ignored here
}
^